# TCG2026

./: .gitignore  CMakeLists.txt  build_target_projects.sh  config.json  create_db.sh  generate_prompts.sh  make_db.sh  requirements.txt  result_common_fails.csv  result_mean_dist.csv  result_uniform_dist.csv  trace_db.sh
TestProjects/: REF.txt  URL.txt  build_all.py  clone.py
experiments/: builder.py  coverage.py  error_analyzer.py  error_category.py  error_category_description.py  error_patterns.py  function_analyzer.py  main.py  repair.py  statistic.py  temp.py
experiments/01_JsonBox/test_files/: test_14.cpp  test_17.cpp  test_18.cpp  test_20.cpp  test_30.cpp  test_32.cpp  test_33.cpp  test_4.cpp  test_5.cpp  test_51.cpp  test_58.cpp  test_59.cpp  test_63.cpp
experiments/02_re2/test_files/: test_106.cpp  test_116.cpp  test_119.cpp  test_12.cpp  test_122.cpp  test_124.cpp  test_129.cpp  test_134.cpp  test_138.cpp  test_14.cpp  test_140.cpp  test_142.cpp  test_149.cpp  test_152.cpp  test_154.cpp  test_155.cpp  (+145 more)
experiments/98_regex/: '_error.txt  (_error.txt  _error.txt  a_error.txt  b_error.txt  c_error.txt  category_extraction.py  d_error.txt  doublequotes_error_error.txt  e_error.txt  error_log_analyzer.py  f_error.txt  g_error.txt  h_error.txt  i_error.txt  m_error.txt  n_error.txt  o_error.txt  p_error.txt  r_error.txt  real_error_msg_check.py  rewirte_DiagnosticLexKinds.td  rewirte_DiagnosticParseKinds.td  rewirte_DiagnosticSemaKinds.td  s_error.txt  t_error.txt  temp_1.c  test1.py  u_error.txt  v_error.txt  ~_error.txt
experiments/LLM/: .~lock.binary_logistic.csv#  binary_logistic.csv  find_target.py  integrated_apf.csv  integrated_pe.csv  multiclass_logistic.csv
experiments/agent/: 1st_config.sh  2nd_config.sh  build.py  execute.py  fix-tc-claude.sh  fix-tc-codex.sh  stat-tc.sh  target_copy.py
experiments/repair/: REF.txt  main.py  repair_prompt.py
src/: CMakeLists.txt
src/adapter/: IDBAdapter.hpp  IDBAdapter.py
src/application/: CMakeLists.txt  IPipelineStep.hpp  PipelineManager.cpp  PipelineManager.hpp  main_create_db.cpp  main_json_config.cpp  main_new_create_db.cpp  main_new_trace_db.cpp  main_prompt_creator.py  main_trace_db.cpp
src/domain/: CMakeLists.txt
src/domain/code_analyzer/: CMakeLists.txt
src/domain/code_analyzer/interface/: ICodeAnalyzer.hpp
src/domain/code_analyzer/model/: AbsModel.hpp  BasicModel.hpp  CXXRecordModel.hpp  EnumModel.hpp  FieldModel.hpp  FileModel.hpp  FriendModel.hpp  FunctionModel.hpp  LinkageSpecModel.hpp  MacroModel.hpp  NamespaceAliasModel.hpp  NamespaceModel.hpp  RecordModel.hpp  TypeAliasModel.hpp  TypedefModel.hpp  UsingDirectiveModel.hpp  UsingModel.hpp  VariableModel.hpp
src/domain/code_analyzer/plugins/: ASTConsumer.cpp  ASTConsumer.hpp  AbsCodeAnalyzer.hpp  CodeAnalyzer.cpp  CodeAnalyzer.hpp  CodeAnalyzer_main.cpp  FrontendAction.cpp  FrontendAction.hpp  Visitor.cpp  Visitor.hpp
src/domain/code_analyzer/plugins/handlers/: AbsHandler.hpp  CXXRecordHandler.cpp  CXXRecordHandler.hpp  EnumHandler.cpp  EnumHandler.hpp  FieldHandler.cpp  FieldHandler.hpp  FileHandler.hpp  FriendHandler.cpp  FriendHandler.hpp  FunctionHandler.cpp  FunctionHandler.hpp  LinkageSpecHandler.hpp  MacroHandler.hpp  NamespaceAliasHandler.hpp  NamespaceHandler.cpp  NamespaceHandler.hpp  RecordHandler.cpp  RecordHandler.hpp  TypeAliasHandler.hpp  TypedefHandler.hpp  UsingDirectiveHandler.hpp  UsingHandler.hpp  VariableHandler.cpp  VariableHandler.hpp
src/domain/configurator/: CMakeLists.txt
src/domain/configurator/factory/: ConfigFactory.hpp
src/domain/configurator/interface/: IConfigurator.hpp
src/domain/configurator/model/: ConfigModel.hpp
src/domain/configurator/plugins/: AbsConfigurator.hpp  JsonConfigurator.cpp  JsonConfigurator.hpp  ModelConfigurator.cpp  ModelConfigurator.hpp
src/domain/dependency_tracer/: CMakeLists.txt
src/domain/dependency_tracer/interface/: IDependencyTracer.hpp
src/domain/dependency_tracer/model/: AbsModel.hpp  CXXRecordModel.hpp  EnumModel.hpp  FunctionCallModel.hpp  HeaderModel.hpp  RecordModel.hpp  VarModel.hpp
src/domain/dependency_tracer/plugins/: ASTConsumer.cpp  ASTConsumer.hpp  AbsDependencyTracer.hpp  DependencyTracer.cpp  DependencyTracer.hpp  DependencyTracer_main.cpp  FrontendAction.cpp  FrontendAction.hpp  Visitor.cpp  Visitor.hpp
src/domain/dependency_tracer/plugins/Finders/: CXXRecordFinder.cpp  CXXRecordFinder.hpp  CXXRecordFinder_new.cpp  CXXRecordFinder_new.hpp  EnumFinder.cpp  EnumFinder.hpp  FinderDispatcher.cpp  FinderDispatcher.hpp  FunctionCallFinder.cpp  FunctionCallFinder.hpp  IFinder.hpp  RecordFinder.cpp  RecordFinder.hpp  VarFinder.cpp  VarFinder.hpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/DBImpl/: AbsDBImpl.cpp  AbsDBImpl.hpp  DBFactory.cpp  DBFactory.hpp  TopLevelQueries.cpp  TopLevelQueries.hpp
src/infrastructure/DBImpl/Controllers/: CXXRecordController.cpp  CXXRecordController.hpp  CXXRecordTraceController.cpp  CXXRecordTraceController.hpp  ConstructorDeclarationController.cpp  ConstructorDeclarationController.hpp  ConstructorDefinitionController.cpp  ConstructorDefinitionController.hpp  EnumController.cpp  EnumController.hpp  EnumTraceController.cpp  EnumTraceController.hpp  FieldController.cpp  FieldController.hpp  FileController.cpp  FileController.hpp  FriendController.cpp  FriendController.hpp  FunctionCallTraceController.cpp  FunctionCallTraceController.hpp  FunctionDeclarationController.cpp  FunctionDeclarationController.hpp  FunctionDefinitionController.cpp  FunctionDefinitionController.hpp  HeaderTraceController.cpp  HeaderTraceController.hpp  IDBController.cpp  IDBController.hpp  MacroController.cpp  MacroController.hpp  NamespaceAliasController.cpp  NamespaceAliasController.hpp  NamespaceController.cpp  NamespaceController.hpp  RecordController.cpp  RecordController.hpp  RecordTraceController.cpp  RecordTraceController.hpp  TypeAliasController.cpp  TypeAliasController.hpp  (+10 more)
src/infrastructure/PyDBImpl/: SQLiteAdapter.py
src/utils/: StringUtils.hpp
test_reconstruction/0/: frames.txt  rigs.txt
testdb/: LOG  LOG.old
(+26140 files in other folders)
